# pangea-sim

./: CLAUDE.md  Cargo.build-spec.json  Cargo.toml  README.md
docs/: certification.md  compiler-is-verifier.md  compliance-verification.md  invariants.md
src/: analysis.rs  business.rs  certification.rs  compliance.rs  engine.rs  error.rs  lib.rs  mutations.rs  network.rs  process_model.rs  remediation.rs  sandbox.rs  schemas.rs  security_policies.rs  state_machines.rs  transitions.rs
src/invariants/: k8s.rs  mod.rs
src/simulations/: backup_vault.rs  bastion_host.rs  cloudtrail.rs  composed.rs  config.rs  config_recorder.rs  dns_zone.rs  ecr_registry.rs  encrypted_storage.rs  helm_chart.rs  ingress_alb.rs  k3s_cluster_iam.rs  k3s_dev_cluster.rs  mod.rs  monitoring_stack.rs  nat_gateway.rs  nix_builder_fleet.rs  quero_platform.rs  rds_cluster.rs  secrets_manager.rs  secure_vpc.rs  tiered_subnets.rs  vpc_endpoints.rs  waf_shield.rs  wireguard_vpn.rs
tests/: analysis_proofs.rs  architecture_invariants.rs  architecture_variants.rs  builder_fleet_proofs.rs  builder_fleet_simulations.rs  business_proofs.rs  certification_proofs.rs  compiler_is_verifier.rs  compliance_proofs.rs  composed_systems.rs  determinism.rs  dogfooding_proof.rs  exhaustive_proofs.proptest-regressions  exhaustive_proofs.rs  helm_simulation_proofs.rs  invariant_proofs.rs  mutation_proofs.rs  network_proofs.rs  quero_platform_proofs.rs  remediation_proofs.rs  sandbox_proofs.rs  schema_proofs.rs  security_policy_proofs.rs  self_proof.rs  state_machine_proofs.rs  transition_proofs.rs
