[package]
name = "pangea-sim"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Typed infrastructure simulation — synthesize, execute, verify"
license = "MIT"
repository = "https://github.com/pleme-io/pangea-sim"

[dependencies]
ruby-synthesizer = { path = "../ruby-synthesizer", features = ["iac-bridge"] }
iac-forge = { git = "https://github.com/pleme-io/iac-forge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
proptest = "1"

[dev-dependencies]
proptest = "1"

[lints.clippy]
pedantic = "warn"
