[package]
name = "pangea-sim"
version = "0.1.0"
edition = "2024"
rust-version = "1.89.0"
description = "Typed infrastructure simulation — synthesize, execute, verify"
license = "MIT"
repository = "https://github.com/pleme-io/pangea-sim"

[features]
default = []
wasm-sandbox = ["dep:wasmtime", "dep:wasmtime-wasi"]
certification = ["dep:tameshi", "dep:blake3"]
compliance = ["dep:compliance-controls"]

[dependencies]
ruby-synthesizer = { path = "../ruby-synthesizer", features = ["iac-bridge"] }
iac-forge = { git = "https://github.com/pleme-io/iac-forge" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
proptest = "1"
wasmtime = { version = "29", optional = true }
wasmtime-wasi = { version = "29", optional = true }
tameshi = { path = "../tameshi", optional = true }
blake3 = { version = "1", optional = true }
compliance-controls = { path = "../compliance-controls", optional = true }

[dev-dependencies]
proptest = "1"

[lints.clippy]
pedantic = "warn"
